# yaltl

./: .gitignore  CMakeLists.txt  CofiConfig.h.cmake  Dockerfile  LICENSE  README.md  TofiConfig.h.cmake  YaltlConfig.h.cmake  action.yml  tofi  tofib
.github/workflows/: build.yml  cmake.yml
include/: cofi.h  mode.h  tofi.h  yaltl.h
include/modes/: dmenu.h  drun.h  i3wm.h  recent.h  run.h  script.h
include/utils/: command.h  fuzzyresult.h  popen.h  regex.h  spawn.h  string.h
include/utils/regex/: regex_pcre.h  regex_stl.h
src/: cofi.cpp  main.cpp  tofi.cpp  yaltl.cpp
src/modes/: dmenu.cpp  drun.cpp  i3wm.cpp  recent.cpp  run.cpp  script.cpp
src/utils/: command.cpp  regex.cpp  regex_pcre.cpp  regex_stl.cpp  spawn.cpp
src/utils/posix/: spawn.cpp
src/utils/win32/: spawn.cpp
